<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/greeting_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_about"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        android:onClick="showAbout"
        app:layout_constraintTop_toBottomOf="@+id/greetingText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/goToDeterminantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_list"
        android:onClick="showList"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton"
        />

    <Button
        android:id="@+id/goToInverseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_selection"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        android:onClick="showSelection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToDeterminantButton"
        />

    <Button
        android:id="@+id/goToAddSubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_maxminuniv"
        android:textSize="20sp"
        android:onClick="showMinMax"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToInverseButton"
        />

    <Button
        android:id="@+id/goToContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Адресна книга"
        android:textSize="20sp"
        android:onClick="showContacts"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToAddSubButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>